force-app/main/default/objects/ServiciosActividad__c/ServiciosActividad__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ServiciosActividad</label>
</CustomObject>