force-app/main/default/objects/ServiciosActividad__c/fields/Actividad__c.field-meta.xml
<CustomField>
    <fullName>Actividad__c</fullName>
    <label>Actividad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>