force-app/main/default/objects/ServiciosActividad__c/fields/MOSTRAR1__c.field-meta.xml
<CustomField>
    <fullName>MOSTRAR1__c</fullName>
    <label>MOSTRAR1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>