force-app/main/default/objects/ServiciosActividad__c/fields/MOSTRAR2__c.field-meta.xml
<CustomField>
    <fullName>MOSTRAR2__c</fullName>
    <label>MOSTRAR2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>