force-app/main/default/objects/ServiciosActividad__c/fields/MOSTRAR3__c.field-meta.xml
<CustomField>
    <fullName>MOSTRAR3__c</fullName>
    <label>MOSTRAR3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>