force-app/main/default/objects/ServiciosActividad__c/listViews/ServiciosActividad.listView-meta.xml
<ListView>
    <fullName>ServiciosActividad</fullName>
    <columns>NAME</columns>
    <columns>Actividad__c</columns>
    <columns>Activo__c</columns>
    <columns>MOSTRAR1__c</columns>
    <columns>MOSTRAR2__c</columns>
    <columns>MOSTRAR3__c</columns>
    <filterScope>Everything</filterScope>
    <label>ServiciosActividad</label>
    <language>es</language>
</ListView>